deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: netcore-api-service
      port:
        number: 80
  rules:
  - host: microk8s.local
    http:
      paths:
      - path: /net/?(.*)
        pathType: Prefix
        backend:
          service:
            name: netcore-api-service
            port:
              number: 80
      - path: /warp/?(.*)
        pathType: Prefix
        backend:
          service:
            name: warp-api-service
            port:
              number: 5041
      - path: /fiber/?(.*)
        pathType: Prefix
        backend:
          service:
            name: gofiber-api-service
            port:
              number: 5041
      - path: /spring/?(.*)
        pathType: Prefix
        backend:
          service:
            name: spring-api-service
            port:
              number: 5041
      - path: /node/?(.*)
        pathType: Prefix
        backend:
          service:
            name: node-api-service
            port:
              number: 5041

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress
#   namespace: ingress-nginx
# spec:
#   selector:
#     name: api-ingress
#   type: LoadBalancer
#   # loadBalancerIP: 192.168.66.13
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 443
